fixed topbar spacing

--- a/wishlist/wishlistManager/static/styles/styles.css
+++ b/wishlist/wishlistManager/static/styles/styles.css
@@ -9,21 +9,46 @@
 
 .topbar {
     background-color: #333;
-    color: black;
+    color: white;
     padding: 10px;
-    text-align: center;
     width: 100%;
     height: 50px;
-    color: white;
     display: flex;
-    justify-content:center;
-    align-items: center;
     position: fixed;
     top: 0;
-    right: 0;
+    left: 0;
+    box-sizing: border-box;
+    
+}
+
+.topbar-left {
+    display: flex;
+    justify-content: flex-start;
+    flex: 1;
+
+    gap: 20px; 
     
 
 }
+
+.topbar-center {
+    display: flex;
+    flex: 3;
+    justify-content: center;
+    gap: 20px; 
+
+}
+
+.topbar-right {
+    display: flex;
+    justify-content: flex-end;
+    flex: 1;
+    gap: 20px; 
+
+}
+
+
+
 .topbar a {
     color: white;
     text-decoration: none;
